Update activity model